code review improvements