@@ -13,7 +13,7 @@ public record Item(
         String name,
         BigDecimal price
 ) {
-    public static List<Item> items = Arrays.asList(
+    public static List<Item> items = List.of(
             new Item(1, "Banana", new BigDecimal("1.5")),
             new Item(2, "Kiwi", new BigDecimal("2.5")),
             new Item(3, "Grape", new BigDecimal("1.25"))
